syntax = 'proto3';

package com.via.sep6.best.movies.user;

message Movie {
  int32 id = 1;
  string title = 2;
  int32 releaseYear = 3;
}

message GetTopMoviesRequest {
}

message GetTopMoviesResponse {
  repeated Movie movie = 1;
}

service UserService {
  rpc getTopMovies(GetTopMoviesRequest) returns (GetTopMoviesResponse) {}
}